[package]
name = "untitled"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.19.0"
eframe = "0.19.0"
image = "0.24.4"
egui_extras = { version = "0.19.0", features = ["image"] }
native-dialog = "0.6.3"
nokhwa = {version = "0.9.4", features= ["input-v4l"]}